# jarvis

./: .env  .env.example  Makefile  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8ecb469ddd58_new_migration_2025_11_12_11_29_32.py  948a5301031d_new_migration_2025_11_13_01_12_52.py  ef7b1dabfb1a_add_camera_id_to_tree_and_iot_message_.py
backend/app/: main.py
backend/app/models/: __init__.py  iot.py  log.py  plantation.py  tree.py  user.py
backend/app/routers/: analytics.py  health.py  iot.py  jarvis.py  logs.py  plantations.py  trees.py  users.py
backend/app/schemas/: __init__.py  iot.py  log.py  plantation.py  tree.py  user.py
backend/app/scripts/: seed_db.py
backend/app/services/: iot.py  jarvis.py  log.py  mqtt.py  plantation.py  tree.py  user.py
backend/app/utils/: config.py  helper.py
frontend/: package-lock.json  package.json
frontend/app/: app.css  routes.ts
frontend/app/api/: analytics.ts  health.ts  jarvis.ts  logs.ts  plantations.ts  trees.ts
frontend/app/components/: chatbot.tsx  header.tsx  page-breadcrumbs.tsx  sidebar.tsx
frontend/app/components/ui/: button.tsx
frontend/app/constants/: analytic.ts  breadcrumb.ts  dummy.ts  sidebar.ts
frontend/app/lib/: api.ts
frontend/app/routes/: home.tsx
frontend/app/routes/dashboard/: index.tsx
frontend/app/routes/login/: index.tsx
frontend/app/routes/welcome/: welcome.tsx
frontend/app/types/: api.ts  health.ts  tree.ts
frontend/public/fonts/: Montserrat-Black.ttf:Zone.Identifier
(+16 files in other folders)
